--- a/style.css
+++ b/style.css
@@ -2870,7 +2870,7 @@ select.mobile-device {
 
 
 .banner-bg-1{
-	background: url(uploads/about_02.JPG);
+	background: url(uploads/about_02.jpg);
 	padding: 120px 0;	
 	background-clip: initial;
 	background-color: rgba(0, 0, 0, 0);
